unpackaged/main/default/objects/User/fields/Docrio_Signature_ID__c.field-meta.xml
<CustomField>
    <fullName>Docrio_Signature_ID__c</fullName>
    <description>The ID of the Docrio File that holds the Signature Image</description>
    <inlineHelpText>The ID of the Docrio File that holds the Signature Image</inlineHelpText>
    <label>Docrio Signature ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>