unpackaged/main/default/objects/User/fields/litify_time__lit_Time_Tracking_Role__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Time_Tracking_Role__c</fullName>
    <label>Time Tracking Role (deprecated)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Case Manager</fullName>
            </value>
            <value>
                <fullName>Paralegal</fullName>
            </value>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Managing Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>