unpackaged/main/default/objects/User/fields/tso_Bar_Number__c.field-meta.xml
<CustomField>
    <fullName>tso_Bar_Number__c</fullName>
    <label>Bar Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>