unpackaged/main/default/objects/User/fields/tso_Middle_Initial__c.field-meta.xml
<CustomField>
    <fullName>tso_Middle_Initial__c</fullName>
    <label>Middle Initial</label>
    <length>10</length>
    <type>Text</type>
</CustomField>